# pastebinReader

./: README.md  meson.build  mlv.knrf.pastebinReader.json
build-aux/meson/: postinstall.py
data/: meson.build  mlv.knrf.pastebinReader.desktop
src/: main.py  meson.build  pastebin_reader.in
