configure_file(
  input: 'mlv.knrf.pastebinReader.desktop',
  output: 'mlv.knrf.pastebinReader.desktop',
  copy: true,
  install: true,
  install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data('mlv.knrf.pastebinReader.svg',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'))
